# Coin-Hunter

./: .gitignore  README.md  coin-hunter.cabal  maze.cabal  symbols.md
app/: Client.hs  Main.hs  Server.hs  UI.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.7/: maze-0.1.0.0-inplace.conf  package.cache
src/: Maze.hs  Server.hs  UI.hs
src/Maze/: Algorithms.hs  Core.hs  Utils.hs
src/Maze/Algorithms/: BinaryTree.hs  Kruskal.hs  MyAlgorithm.hs  Prim.hs  RandomGeneration.hs  RecursiveBacktracking.hs
