cabal-version:      2.4
name:               coin-hunter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Maze
                      Maze.Algorithms
                      Maze.Algorithms.BinaryTree
                      Maze.Algorithms.Kruskal
                      Maze.Algorithms.RecursiveBacktracking
                      Maze.Algorithms.Prim
                      Maze.Core
                      Maze.Utils

    -- Modules included in this library but not exported.
    -- other-modules:    Maze.Algorithms.BinaryTree
    --                   Maze.Algorithms.Kruskal
    --                   Maze.Algorithms.RecursiveBacktracking

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      array,
                      brick,
                      microlens-platform,
                      text,
                      combinat,
                      containers,
                      extra,
                      pqueue,
                      random,
                      time,
                      union-find,
                      vty,
                      QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

executable coin-hunter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    UI

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        array,
        brick,
        containers,
        coin-hunter,
        microlens-platform,
        random,
        text,
        time,
        vty,
        vty-unix

    ghc-options: -threaded

    hs-source-dirs:   app
    default-language: Haskell2010

executable Server
    main-is:          Server.hs
    exposed-modules:  Server
    other-modules:    UI
    build-depends:    base
                    , async >=2.2 && <2.3
                    , bytestring
                    , websockets
                    , parsec
                    , process
                    , coin-hunter,
                    array,
                    brick,
                    containers,
                    microlens-platform,
                    random,
                    text,
                    time,
                    vty,
                    vty-unix
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded

executable Client
    main-is:          Client.hs

    build-depends:    base
                    , vty
                    , text
                    , brick
                    , bytestring
                    , websockets
                    , coin-hunter
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded