cabal-version:      3.8
name:               coin-hunter
version:            1.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Maze
        Maze.Algorithms
        Maze.Algorithms.BinaryTree
        Maze.Core
        Maze.Utils
        UI
        Server

    build-depends:
        -- general
        base,
        extra,
        array,
        containers,

        -- server
        text,
        bytestring,
        parsec,
        websockets,

        -- utils
        time,
        text,
        random,
        combinat,
        microlens-platform,

        -- ui
        brick,
        vty,
        vty-unix,

        -- testing
        QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

executable coin-hunter
    main-is:          Main.hs

    build-depends:
        base,
        coin-hunter,
        brick

    ghc-options: -threaded

    hs-source-dirs:   app
    default-language: Haskell2010

-- executable Server
--     main-is:          Server.hs

--     build-depends:
--         base,
--         coin-hunter,
--         websockets,
--         bytestring,
--         text,
--         parsec,
--         process,
--         brick

--     hs-source-dirs:   app
--     default-language: Haskell2010
--     ghc-options: -threaded

executable Client
    main-is:          Client.hs

    build-depends:
        base,
        coin-hunter,
        text,
        bytestring,
        websockets,
        brick,
        vty

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded